[tool.poetry]
name = "fastapi-duplicate-models-in-jsonschema-repro"
version = "0.1.0"
description = ""
authors = ["Hendrik Lücke-Tieke <hendrik.luecke-tieke@igd.fraunhofer.de>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"
flake8 = "^6.1.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
